# gwsyn

./: .gitignore  SSD_Sidequest.py  pyproject.toml  test.ipynb  test_checkpoints.ipynb  wandb_sweep_NC.py
SSD_eval/: DEBUGGING_en_EVAL.py  Figures_distribution_generator.py  Figures_examples_generator.py  SSD_H_evaluation_functions.py  SSD_Train.py  SSD_eval_arbitrary.py  SSD_eval_global.py  SSD_eval_regularity.py  SSD_generate_evalset.py  SSD_test_utils.py  SSD_utils.py  SSD_visualize_functions.py  Seed_high_translation.py  __init__.py  exemples_plaquette.py
config/: base_params.yaml  color_mod.yaml  high_contrastive.yaml  high_cycles.yaml  high_translation.yaml  main.yaml  side_quest_1.yaml  train_gw.yaml
notebooks/: DEBUG_notebook.ipynb  SSD_Play_with_color.ipynb  SSD_Play_without_color copy.ipynb  SSD_Play_without_color.ipynb  colors_mod.ipynb  comparison_training_params.ipynb  debug.ipynb  noise copy.ipynb  noise.ipynb  report.ipynb  syn_3_modules_cycle.ipynb  syn_3_modules_full.ipynb  test.ipynb  test_attributs.ipynb  test_checkpoints.ipynb  test_color_distribution.ipynb  test_cycle.ipynb  test_demi_cycle.ipynb  test_gan.ipynb  test_loss.ipynb  test_noise.ipynb
notebooks/lightning_logs/version_1/: events.out.tfevents.1776172708.Anita.2892461.0
syn_project/: archive.py  debug.ipynb  test.ipynb  train.py  utils_analyse.py  utils_color_analysis.py  utils_notebook.py  utils_shape_loss.py  utils_train.py
tests/: test_syn_callback.py  test_syn_train.py
